# portello

./: .dockerignore  .env.example.dev  .env.example.prod  README.md  app.py  app.spec  dev.docker-compose.yml  prod.docker-compose.yml  pyproject.toml  requirements.txt  test.docker-compose.yml
src/configs/: default_config.py  mongo_config.py  testing_config.py
src/constants/: messages.py
src/data_access/: user_dao.py
src/models/: user_model.py
src/services/: auth_service.py  user_service.py
src/ui/: interface_app.py
src/ui/views/: login_view.py  main_view.py  register_view.py
src/utils/: exceptions_handler.py
test/: conftest.py
test/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_mongo_config.py  test_production_config.py  test_testing_config.py
test/test_constants/: messages.py
test/test_data_access/: test_user_dao.py
test/test_models/: test_user_model.py
test/test_services/: test_auth_service.py  test_user_service.py
test/test_ui/: test_interface_app.py  test_styles.py
test/test_ui/test_components/: test_labeled_entry.py
test/test_ui/test_views/: test_login_view.py  test_main_view.py  test_register_view.py
tests/: conftest.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_mongo_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py
tests/test_data_access/: test_user_dao.py
tests/test_models/: test_user_model.py
tests/test_services/: test_auth_service.py  test_user_service.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_utils/: test_dialogs.py  test_error_handler.py  test_exceptions_handler.py
(+4 files in other folders)
